<resources>
    <string name="app_name">Android-Kotlin</string>
    <string name="hello_world">Hello World</string>
    <string name="second_activity">Second Activity</string>
    <string name="navigate">Navigate</string>
    <string name="increment">Increment</string>
    <string name="decrement">decrement</string>
    <string name="null_value">null</string>
    <string name="default_value">Default</string>
    <string name="title">Title</string>
    <string name="activity">Activity</string>
    <string name="list_view">List View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="topics">Topics</string>
    <string name="configuration_change">Configuration change</string>
    <string name="fragments">Fragments</string>
    <string name="fragment_one">Fragment One</string>
    <string name="open_second_fragment">Open Second Fragment</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="back">Back</string>
    <string name="pdf_viewer">Pdf Viewer</string>
    <string name="enter_page_number">Enter Page Number</string>
    <string name="Ok">Ok</string>
    <string name="close">Close</string>
    <string name="classic_singleton">Classic Singleton</string>
    <string name="design_patterns">Design patterns</string>
    <string name="structural_patterns">Structural Patterns</string>
    <string name="behavioural_patterns">Behavioural Patterns</string>
    <string name="creational_patterns">creational Patterns</string>
    <string name="view_model">View Model</string>
    <string name="click">click</string>
    <string name="open_activity">Open Activity</string>
    <string name="live_data">Live Data</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter Password</string>
    <string name="mvvm">MMVM</string>
    <string name="view_binding">View Binding</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="incorrect_username_password">Incorrecr username/Password</string>
    <string name="login_success">Login successfully</string>
    <string name="data_binding">Data Binding</string>
    <string name="send_broad_cast">Send Broad Cast</string>
    <string name="broad_cast_receivers">Broad cast receivers</string>
    <string name="send_local_broadcast">Send local Broadcast</string>
    <string name="send_global_broadcast">Send Global Broadcast</string>
    <string name="started_service">Started Service</string>
    <string name="bound_service">Bound Service</string>
    <string name="foreground_service">Foreground service</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop service</string>
    <string name="services">Services</string>
    <string name="show_time">Show Time</string>
    <string name="intent_service">Intent Service</string>
    <string name="enqueue_work">Enqueue Work</string>
    <string name="job_intent_service">Job intent service</string>
    <string name="start_job">Start job</string>
    <string name="cancel_task">Cancel task</string>
    <string name="job_schedulers">Job schedulers</string>
    <string name="work_manager">Work Manager</string>
    <string name="one_time_work_request">One time work request</string>
    <string name="start_one_time_work">Start one time work</string>
    <string name="expedited_work_request">Expedited Work Request</string>
    <string name="start_expedited_work_request">Start Expedited Work Request</string>
    <string name="periodic_work_request">Periodic work request</string>
    <string name="start_periodic_work_request">Start Periodic Work Request</string>
    <string name="enter_repeat_interval">Enter repeat Interval(min 15)</string>
    <string name="enter_flex_interval">Enter flex Interval(min 5)</string>
    <string name="enqueued_time">Enqueued Time</string>
    <string name="started_time">Started Time</string>
    <string name="finished_time">Finished Time</string>
    <string name="enter_working_time">Enter Working Time</string>
    <string name="cancel_all_works">Cancel All Works</string>
    <string name="unique_work_request">Unique Work Request</string>
    <string name="replace_policy">Replace Policy</string>
    <string name="reset_work_count">Reset Work Count</string>
    <string name="keep_policy">Keep policy</string>
    <string name="append_policy">Append Policy</string>
    <string name="append_or_replace_policy">Append Or Replace Policy</string>
    <string name="activity_resullt_api">Activity Result Api</string>
    <string name="start_second_activity_for_result">Start second activity for result</string>
    <string name="navigate_back">Navigate back</string>
</resources>