<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activityVm"
            type="com.example.android_kotlin.workManager.MyWorkManagerActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <Button
                android:id="@+id/oneTimeWorkReqBtm"
                style="@style/work_manger_btn_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="@{activityVm::onTimeWorkReqClick}"
                android:text="@string/one_time_work_request"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/expeditedWorkReqBtn"
                style="@style/work_manger_btn_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="@{activityVm::expeditedWorkReqBtnClick}"
                android:text="@string/expedited_work_request"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <Button
                android:id="@+id/periodicWorkReqBtn"
                style="@style/work_manger_btn_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="@{activityVm::periodicWorkReqBtnClick}"
                android:text="@string/periodic_work_request"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.fragment.app.FragmentContainerView
            android:visibility="visible"
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:name="com.example.android_kotlin.workManager.oneTimeWorkRequest.OneTimeWorkRequestFragment"
            tools:layout="@layout/wm_fragment_one_time_work_request" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>